# warzone-lobby-sentinel

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy-node9.sh  deploy-proxmox.sh  deploy-to-lxc.sh  install-in-ct.sh  requirements.txt  warzone-lobby-sentinel.env.example  warzone-lobby-sentinel.service
data/: server-roles.json
logs/: README.md  journal-14d.txt  manifest.json
logs/sessions/18bd23b208b3d5b0/: peers.latest.json  session.meta.json
logs/sessions/18bd379c13956aa6/: session.meta.json
logs/sessions/18bd520301624675/: session.meta.json
logs/sessions/18bd5c2c88d84b3f/: session.meta.json
logs/sessions/18bd5c651087a088/: peers.latest.json  session.meta.json
logs/sessions/18bd5cdcbea6800c/: peers.latest.json  session.meta.json
logs/sessions/18bd5e6e60eeaa45/: peers.latest.json  session.meta.json
rust/: Cargo.toml
rust/src/: ai_advisor.rs  cheater_lobby.rs  dashboard.html  dashboard.rs  enrich.rs  firewalla.rs  fold.rs  game_state.rs  information_flow.rs  learning.rs  lib.rs  main.rs  metrics.rs  network_guard.rs  network_session.rs  notify.rs  packets.rs  peer_tracker.rs  session_export.rs  traffic.rs
samples/: live_events.ndjson  match_events.json  overwolf_bridge.js
scripts/: sanitize-logs.py
sentinel/: __init__.py  alert_notify.py  autonomous.py  baseline.py  cheater_lobby.py  cli.py  enrich.py  events.py  firewalla_client.py  ingest.py  killcam.py  learning.py  network.py  network_session.py  push_notify.py  scorer.py  store.py  xbox_notify.py
tools/: emit_test.py  run_automated.sh  setup-xbox-notify.py
(+5 files in other folders)
