[package]
name = "warzone-sentinel"
version = "0.2.0"
edition = "2021"
description = "Autonomous Xbox Warzone lobby sentinel — Rust core with feature folding"

[[bin]]
name = "warzone-sentinel"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
zstd = "0.13"
url = "2"
urlencoding = "2"
base64 = "0.22"
rand = "0.9"
